--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,13 @@
             <artifactId>javafx-controls</artifactId>
             <version>20.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>20.0.2</version>
+        </dependency>
+
+
+
     </dependencies>
-
-
-
 </project>
